--- a/CLIENT/sccma/Markup/Components/Cause/cause.module.css
+++ b/CLIENT/sccma/Markup/Components/Cause/cause.module.css
@@ -10,7 +10,7 @@
     position: relative;
     padding-top: 20px;
 }
-.cause_container .left_container h2::after, .cause_container .right_container h2::after {
+.cause_container .left_container h2::after {
     content: ''; 
     display: block; 
     width: 75%; 
@@ -18,6 +18,16 @@
     background-color: rgb(150, 201, 242); 
     position: absolute; 
     left: 12%;
+    margin-top: 12px;
+}
+.cause_container .right_container h2::after {
+    content: ''; 
+    display: block; 
+    width: 80%; 
+    height: 0.3px; 
+    background-color: rgb(150, 201, 242); 
+    position: absolute; 
+    left: 10%;
     margin-top: 12px;
 }
 .card_container {
@@ -49,14 +59,60 @@
     margin-top: 34px;
     
 }
+.donate_btn:hover {
+    background-color: #fff;
+    outline: #ff5900;
+}
+.featured_card {
+    background-color: #ECECEC !important;
+    box-shadow: 0px 0px 5px 2.5px rgba(192, 190, 190, 0.31) !important;
+}
 
 @media (min-width : 768px) {
     .cause_container {
         display: flex;
         justify-content: space-between;
     }
-    /* .featured_card_container {
-        width: 300px;
-        background-color: #fff;
-    } */
+    .featured_card_container {
+        width: 40%;
+        margin: 0;
+        margin-right: 90px;
+    }
+    .cause_container .right_container h2::after {
+        content: ''; 
+        display: block; 
+        width: 28%; 
+        height: 0.3px; 
+        background-color: rgb(150, 201, 242); 
+        position: absolute; 
+        left: 59%;
+        margin-top: 12px;
+    }
+    .cause_container .left_container h2::after  {
+        width: 70%;
+        left: 15%;
+    }
+    .right_container {
+        margin-right: 50px;
+        padding-top: 20px;
+    }
+    .cause_container  h2 {
+        text-align: start;
+    }
+    .cause_container .left_container h2 {
+        text-align: start;
+        padding-left: 86px;
+    }
+    .donate_btn {
+        padding-top: 5px;
+        padding-left: 17px;
+        border: 1.9px solid #ff5900;
+        margin-right: 30px;
+    }
+    .featured_card {
+        background-color: #ECECEC !important;
+        width: 300px !important ;
+        height: 320px !important;
+        box-shadow: 0px 0px 5px 2.5px rgba(192, 190, 190, 0.31) !important;
+    }
 }
