Finish rotating card component

--- a/CLIENT/sccma/Markup/Components/Justification/justification.module.css
+++ b/CLIENT/sccma/Markup/Components/Justification/justification.module.css
@@ -6,7 +6,7 @@
     margin-top: 15px;
 }
 .justification_text_container {
-    color: #0975da;
+    color: #004e82;
     padding-top: 60px;
     width: 90%;
     text-align: center;
