--- a/CLIENT/sccma/Markup/Components/Map/map.module.css
+++ b/CLIENT/sccma/Markup/Components/Map/map.module.css
@@ -1,8 +1,12 @@
 .map_container {
     width: 100%; 
     height: 400px; 
+    
 }
-
+.map_container iframe {
+    border: none;
+    box-shadow: 0 0 5px 0.5px #0000002e;
+}
 @media (max-width: 768px) {
     .map_container {
         height: 250px; /* Reduce the height for smaller screens */
