--- a/CLIENT/sccma/Markup/Components/Testimonial/testimonial.module.css
+++ b/CLIENT/sccma/Markup/Components/Testimonial/testimonial.module.css
@@ -5,10 +5,12 @@
     margin-bottom: 30px;
     margin-top: 100px;
     box-shadow: 0 0 5px 0.9px #0000004d;
+    color: #000;
 }
 .testimonial_container h2 {
     padding-top: 24px;
     font-size: 26px;
+    color: #fff;
 }
 .testimonial_profile_wrapper {
     margin: 10px auto;
@@ -16,14 +18,15 @@
 .testimonial_profile_wrapper div {
     height: 320px;
     width: 210px;
-    box-shadow: 0 0 5px 1px #00000045;
+    box-shadow: 0 0 5px 1px #fffefe76;
     margin: 25px auto;
-    background-color: #000000;
-    /* border-radius: 10px; */
+    background-color: #ECECEC;
 }
 .testimonial_profile_wrapper p {
     text-align: start;
-    padding-left: 3px;
+    text-align: center;
+    font-size: 15px;
+    padding-top: 8px;
 }
 .testimonial_profile_wrapper div img {
     width: 100%;
