--- a/CLIENT/sccma/Markup/Components/LatestNews/latestNews.module.css
+++ b/CLIENT/sccma/Markup/Components/LatestNews/latestNews.module.css
@@ -6,9 +6,20 @@
     width: 250px;
     margin: 0 auto;
 }
+.latestNews_container h1::after {
+    content: '';
+    display: block;
+    width: 97%;
+    height: 0.5px;
+    /* left: 200px; */
+    margin: 5px 0;
+    margin-bottom: 10px;
+    background-color: #dedede;
+}
 .news_img_container img {
     width: 100%;
     border-radius: 5px;
+    box-shadow: 0 0 5px 0.3px #00000035;
 }
 .news_text_container {
     margin: 0 auto;
