--- a/CLIENT/sccma/Markup/Components/GetInTouch/getInTouch.module.css
+++ b/CLIENT/sccma/Markup/Components/GetInTouch/getInTouch.module.css
@@ -5,6 +5,7 @@
     color: #000000;
     text-align: center;
     padding-top: 45px;
+    margin-bottom: 30px;
 }
 .getInTech_container p {
     width: 90%;
