Finish contact us page

--- a/CLIENT/sccma/Markup/Components/Header/Header.module.css
+++ b/CLIENT/sccma/Markup/Components/Header/Header.module.css
@@ -91,7 +91,6 @@ body {
         height: 30px;
         width: 100px;
         font-weight: bold;
-        border-radius: 20px;
         cursor: pointer;
         text-decoration: none;
         color: black;
@@ -99,8 +98,8 @@ body {
         padding-top: 5px;
     }
     .nav_btn:hover {
-        background-color: #ffffff;
-        outline: #ff750b 1.85px solid;
+        background-color: #fff;
+        outline: 1px solid #ff5500;
         transition: all 0.1s ease;
     }
     .nav_items ul{
