--- a/CLIENT/sccma/Markup/Components/MissionWrapper/missionWrapper.module.css
+++ b/CLIENT/sccma/Markup/Components/MissionWrapper/missionWrapper.module.css
@@ -11,7 +11,7 @@
     width: 85%;
     height: 0.5px;
     margin: 5px auto;
-    background-color: #dddcdc;
+    background-color: #ecebeb;
 }
 @media (min-width:768px) {
     .missionCard_container {
