--- a/CLIENT/sccma/Markup/Components/GoalWrapper/goalWrapper.module.css
+++ b/CLIENT/sccma/Markup/Components/GoalWrapper/goalWrapper.module.css
@@ -1,7 +1,7 @@
 .goalWrapper_container {
     color: #000;
     width: 87%;
-    margin: 0 auto;
+    margin: 10px auto;
 }
 .goalWrapper_container h1 {
     text-align: center;
