--- a/CLIENT/sccma/Markup/Components/LatestNews/latestNews.module.css
+++ b/CLIENT/sccma/Markup/Components/LatestNews/latestNews.module.css
@@ -9,7 +9,7 @@
 .latestNews_container h1::after {
     content: '';
     display: block;
-    width: 97%;
+    width: 100%;
     height: 0.5px;
     margin: 5px 0;
     margin-bottom: 10px;
@@ -65,7 +65,10 @@
         margin-top: 15px;
     }
     .news_text_container {
-        width: 38%;
+        width: 42%;
+    }
+    .news_text_container p {
+        font-size: 16px;
     }
     .news_text_container p, .news_text_container h1 {
         text-align: start;
