--- a/CLIENT/sccma/Markup/Components/Footer/Footer.module.css
+++ b/CLIENT/sccma/Markup/Components/Footer/Footer.module.css
@@ -11,8 +11,8 @@
     padding: 12px 0;
 }
 .top_footer_wrapper:first-child p {
-    font-size: 14px;
-    width: 287px;
+    font-size: 15px;
+    width: 280px;
     text-align: center;
     margin: 0 auto;
 }
@@ -56,24 +56,24 @@
 }
 .search_bar input{
     border-radius: 30px;
-    width: 280px;
+    width: 270px;
     height: 27px;
     padding: 0 9px;
     border: none;
 }
 .search_bar input:focus {
-    outline: 2px solid rgb(255, 128, 0);
+    outline: 2px solid rgb(255, 81, 0);
 }
 .copyright_text {
     text-align: center;
-    font-size: 14px;
+    font-size: 13px;
     letter-spacing: 1px;
 } 
 .top_footer_wrapper ul a li:hover {
     text-decoration: underline;
 }
 .links a li {
-    font-size: 12px;
+    font-size: 14px;
 }
 /*desktop display */
 @media screen and (min-width:768px) {
@@ -85,6 +85,7 @@
     display: flex;
     justify-content: space-evenly;
 }
+
 .top_footer_wrapper ul {
     margin-left: 13px;
 }
@@ -121,7 +122,9 @@
     padding: 0;
 }
 .search_bar input{
-    width: 50%;
+    width: 56%;
+    height: 30px;
+    box-shadow: 0 0 5px 0.1px #ffffff6a;
 }
 .footer_links_container .search_bar {
     justify-content: center;
