--- a/CLIENT/sccma/Markup/Components/Services/services.module.css
+++ b/CLIENT/sccma/Markup/Components/Services/services.module.css
@@ -25,8 +25,10 @@
         flex-direction: row;
         justify-content: space-around;
         margin: 0 auto;
+        margin-bottom: 35px;
     }
     .services_container h1 {
         font-size: 30px;
+        padding-bottom: 20px;
     }
 }
