--- a/CLIENT/sccma/Markup/Components/Header/Header.module.css
+++ b/CLIENT/sccma/Markup/Components/Header/Header.module.css
@@ -12,7 +12,7 @@ body {
     background-color: rgb(0, 0, 0);
     justify-content: space-around;
     align-items: center;
-    height: 70px;
+    height: 90px;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -88,14 +88,14 @@ body {
     .nav_btn {
         background-color: #ff7a38;
         border: none;
-        height: 30px;
-        width: 100px;
+        height: 36px;
+        width: 110px;
         font-weight: bold;
         cursor: pointer;
         text-decoration: none;
         color: black;
-        padding-left: 23px;
-        padding-top: 5px;
+        padding-left: 27px;
+        padding-top: 8px;
     }
     .nav_btn:hover {
         background-color: #fff;
@@ -112,5 +112,8 @@ body {
     }
     .nav_items ul li:hover {
         color: #fff;
+    }
+    .nav_items ul a {
+        font-size: 19px;
     }
 }
