--- a/CLIENT/sccma/Markup/Components/LatestNews/latestNews.module.css
+++ b/CLIENT/sccma/Markup/Components/LatestNews/latestNews.module.css
@@ -1,10 +1,13 @@
 .latestNews_container {
     margin: 30px 0;
     color: #000;
+    display: flex;
+    flex-direction: column;
 }
 .news_img_container  {
     width: 250px;
     margin: 0 auto;
+    order: 2;
 }
 .latestNews_container h1::after {
     content: '';
@@ -23,8 +26,9 @@
 .news_text_container {
     margin: 0 auto;
     width: 85%;
-    padding: 10px 0;
+    padding-bottom: 20px;
     text-align: center;
+    order: 1;
 }
 .news_text_container p {
     padding: 5px 0;
@@ -52,6 +56,7 @@
 @media (min-width:768px) {
     .latestNews_container {
         display: flex;
+        flex-direction: row;
         justify-content: space-evenly;
     }
     .news_img_container {
@@ -59,6 +64,7 @@
     }
     .news_img_container {
         height: 300px;
+        order: 1;
     }
     .news_img_container img {
         object-fit: cover;
@@ -66,6 +72,7 @@
     }
     .news_text_container {
         width: 42%;
+        order: 2;
     }
     .news_text_container p {
         font-size: 16px;
