Modify volunteer component

--- a/CLIENT/sccma/Markup/Components/Volunteer/volunteer.module.css
+++ b/CLIENT/sccma/Markup/Components/Volunteer/volunteer.module.css
@@ -3,15 +3,16 @@
     background-size: cover;
     height: 300px;
     margin-bottom: 35px;
-    padding-top: 90px;
+    padding-top: 60px;
     text-align: center;
     color: #000;
     box-shadow: 0 0 7px 0.3px #00000017;
 }
 .volunteer_container p {
-    font-size: 14px;
+    font-size: 13px;
     padding: 10px 0;
-    
+    width: 88%;
+    margin: 0 auto;
 }
 .volunteer_container input {
     display: block;
@@ -25,15 +26,15 @@
     margin-bottom: 30px;
 }
 .volunteer_container input:focus {
-    outline: 1.8px solid #ff8812;
+    outline: 2px solid #ff8812;
 }
 .subscribe_btn {
-    background-color: #ff750b; 
+    background-color: #ff7a38; 
     border: none;
-    height: 30px;
+    height: 40px;
     width: 200px;
-    font-weight: bold;
     border-radius: 20px;
+    font-weight: bold;
     cursor: pointer;
     text-decoration: none;
     color: black;
@@ -51,10 +52,12 @@
         padding-top: 115px;
     }
     .volunteer_container input {
-        width: 45%;
+        width: 50%;
+        height: 35px;
         background-color: #f5fffc;
     }
     .volunteer_container p {
         padding-bottom: 20px;
+        font-size: 17px;
     }
 }
