--- a/CLIENT/sccma/Markup/Components/LearnMore/learnMore.module.css
+++ b/CLIENT/sccma/Markup/Components/LearnMore/learnMore.module.css
@@ -1,11 +1,13 @@
 .learnMore_container {
-    width: 73%;
+    width: 75%;
     margin: 20px auto;
+    margin-top: 0px;
 }
 .learnMore_container p {
     color: #121212;
-    width: 20rem;
-    padding: 7px 0;
+    width: 220px;
+    padding: 10px 0;
+    font-size: 14px;
 }
 .learnMore_video_container {
     margin: 0 auto;
@@ -21,19 +23,20 @@
 }
 @media (min-width:768px) {
     .learnMore_container {
-        width: 93%;
+        width: 96%;
         margin: 70px auto;
     }
     .learnMore_container h2 {
         color: #000;
         text-align: center;
-        margin-bottom: 39px;
+        margin-bottom: 46px;
+        font-size: 30px;
     }
     .learnMore_container p {
         color: #121212;
         width: 310px;
         padding: 5px 0;
-        font-size: 14px;
+        font-size: 16px;
     }
     .learnMore_video_container {
         display: flex;
@@ -42,8 +45,8 @@
         padding: 0 83px;
     }
     .learnMore_video_container .left_video_wrapper {
-        width: 42%;
-        height: 170px
+        width: 40%;
+        height: 240px
     }
     
 }
