--- a/CLIENT/sccma/Markup/Components/Justification/justification.module.css
+++ b/CLIENT/sccma/Markup/Components/Justification/justification.module.css
@@ -6,8 +6,8 @@
     margin-top: 15px;
 }
 .justification_text_container {
-    color: #004e82;
-    padding-top: 60px;
+    color: #000000;
+    padding-top: 110px;
     width: 90%;
     text-align: center;
     margin: 0 auto;
@@ -15,36 +15,38 @@
 .justification_text_container p {
     display: none;
 }
-.justification_text_container h2 {
-    font-size: 20px;
+.justification_text_container h1 {
+    font-size: 25px;
 }
-.justification_text_container h2:first-child {
+.justification_text_container h1:first-child {
     display: none;
 }
 .donate_btn {
-    background-color: #ff5900;
+    background-color: #fa7228;
     border: none;
     display: block;
-    height: 30px;
+    height: 35px;
     width: 130px;
     font-weight: bold;
-    border-radius: 20px;
     cursor: pointer;
     text-decoration: none;
     color: black;
-    padding-top: 6px;
+    padding-top: 8px;
     margin: 20px auto;
     
 }
 .donate_btn:hover {
     background-color: #ffffff;
-    outline: 2px solid #ff5900;
+    outline: 1.8px solid #ff5900;
 }
 @media (min-width:768px) {
     .justification_text_container {
-        padding-top: 240px;
+        padding-top: 290px;
     }
-    .justification_text_container h2:first-child {
+    .justification_text_container h1 {
+        font-size: 50px;
+    }
+    .justification_text_container h1:first-child {
         display: block;
         padding-bottom: 10px;
         font-size: 24px;
