--- a/CLIENT/sccma/Markup/Components/Founder/founder.module.css
+++ b/CLIENT/sccma/Markup/Components/Founder/founder.module.css
@@ -1,10 +1,11 @@
 .founder_container {
    text-align: center;
    color: #000;
+   padding-top: 20px;
 }
 .founder_img_wrapper {
-    height: 250px;
-    width: 250px;
+    height: 280px;
+    width: 290px;
     margin: 0 auto;
     margin-bottom: 40px;
     padding-bottom: 15px;
@@ -29,10 +30,18 @@
     padding-bottom: 20px;
 }
 @media (min-width:768px) {
+    .founder_container {
+        padding-top: 170px;
+    }
     .founder_img_wrapper {
         margin-bottom: 40px;
+        margin-top: 50px;
+        height: 280px;
     }
     .founder_img_wrapper p {
-        font-size: 22px;
+        font-size: 28px;
+    }
+    .founder_text_wrapper {
+        font-size: 19px;
     }
 }
