--- a/CLIENT/sccma/Markup/Components/DonationForm/donationForm.module.css
+++ b/CLIENT/sccma/Markup/Components/DonationForm/donationForm.module.css
@@ -58,23 +58,22 @@
 }
 
 .donate_btn {
-    background-color: #ff5900;
+    background-color: #ff7a38;
     border: none;
     display: block;
-    height: 30px;
-    width: 130px;
+    height: 35px;
+    width: 112px;
     font-weight: bold;
-    border-radius: 20px;
     cursor: pointer;
     text-decoration: none;
     color: black;
-    padding-top: 6px;
+    padding-top: 8px;
     margin: 20px auto;
     
 }
 .donate_btn:hover {
     background-color: #ffffff;
-    outline: 2px solid #ff5900;
+    outline: 1.8px solid #ff5900;
 }
 
 @media (min-width:768px) {
@@ -92,13 +91,13 @@
     }
     .userInfo_wrapper input{
         width: 30vw;
+        height: 33px;
     }
     .address_wrapper input {
         width: 100%;
         
     }
-    /* .amount_wrapper div .bottom_radios div:nth-child(1) {
-        padding-left: 30px;
-    } */
-    
+    .userInfo_wrapper input, .address_wrapper input {
+        height: 33px;
+    }
 }
