--- a/CLIENT/sccma/Markup/Components/Carousel/carousel.module.css
+++ b/CLIENT/sccma/Markup/Components/Carousel/carousel.module.css
@@ -40,7 +40,7 @@
     font-size: 11px;
     width: 90vw;
     text-align: center;
-    background: linear-gradient(to right,#1ff0ff , #9515c8);
+    background: linear-gradient(to right,#39d8de , #0068c3);
     background-clip: text;
     color: transparent;
 }
